--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "sequelize": "^3.30.4",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "url": "^0.11.0"
   }
 }
