--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
+    "node-xlrd": "^0.2.4",
     "sequelize": "^3.30.4",
     "serve-favicon": "~2.4.2",
     "url": "^0.11.0"
