--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "body-parser": "~1.17.1",
     "config-lite": "^2.0.0",
     "connect-session-sequelize": "^4.1.0",
@@ -18,6 +19,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "node-xlrd": "^0.2.4",
+    "officegen": "^0.4.5",
     "sequelize": "^3.30.4",
     "serve-favicon": "~2.4.2",
     "url": "^0.11.0"
